Overflow on about page fixed

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,9 +1,12 @@
 .content {
   height: 100%;
-  min-height: 100%;
   overflow: auto;
 
   &__title {
     @apply px-6;
+  }
+
+  @media (min-width: 1280px) {
+    height: 86%;
   }
 }
